--- a/script/static/css/checkbox.css
+++ b/script/static/css/checkbox.css
@@ -6,7 +6,7 @@ input[type="checkbox"]{
     width: 0;
     margin: 0;
 }
-label[for="alpha"], label[for="to_tw"]{
+label[for="alpha"], label[for="to_tw"], label[for="qr_code"]{
     display: inline-block;
     position: relative;
     left: -10px;
@@ -16,6 +16,7 @@ label[for="alpha"], label[for="to_tw"]{
     line-height: 24px;
     cursor: pointer;
 }
+input:checked + label[for="qr_code"],
 input:checked + label[for="alpha"],
 input:checked + label[for="to_tw"]{
     background: url(img/checked.png) no-repeat;
