--- a/script/templates/pixel_en.html
+++ b/script/templates/pixel_en.html
@@ -12,7 +12,7 @@
     <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
     <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
     <!-- checkbox -->
-    <link href="static/css/checkbox.css" rel="stylesheet">
+    <link href="static/css/checkbox_2.css" rel="stylesheet">
     <!-- Teach bubble -->
     <!-- format -> <button aria-label="instruction" data-balloon-pos="direction(ex:up)"></button> -->
     <!-- format -> aria-label="" data-balloon-pos="up" -->
