--- a/script/templates/pixel_tch.html
+++ b/script/templates/pixel_tch.html
@@ -313,7 +313,7 @@
     window.addEventListener('load', init, false);
 </script>
 <script src="static/js/file_load_helper_tchinese.js"></script>
-<script src="static/js/pixel_set_qradd.js"></script>
+<script src="static/js/pixel_set_2.js"></script>
 <!-- QR code -->
 <script src="static/js/qr_code_enable.js"></script>
 <!-- google translate -->
